# Storage/openapi.yaml
@@ -44,6 +44,13 @@ paths:
             type: string
             format: date-time
             example: 2016-08-29T09:12:33.001Z
+        - name: end_timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: 2016-08-29T09:12:33.001Z
       responses:
         '200':
           description: successfully returned list of meal calories
@@ -88,6 +95,13 @@ paths:
       description: gets user weight after a timestamp
       parameters:
         - name: timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: 2016-08-29T09:12:33.001Z
+        - name: end_timestamp
           in: query
           description: Limits the number of items on a page
           schema:
